!13 feat: 发布 1.0.2 多协议路由与运维能力增强
feat: 发布 1.0.2 多协议路由与运维能力增强

- 重构公开网关入口，引入 EndpointType、EndpointHandler 和统一 GatewayController
- 新增端点到供应商的跨协议适配层，支持 OpenAI Chat、Anthropic Messages、Responses API、Gemini 间的请求/响应转换
- 新增 Responses API 与 Gemini 上游 Provider Client，并增强 DeepSeek Anthropic thinking 兼容
- 新增流式响应转换器注册机制，支持 Responses API SSE 实时转换、工具调用和 reasoning 事件输出
- 新增系统路由配置，支持随机、轮询、加权、会话粘性以及上游失败避让
- 新增管理端仪表盘统计接口和前端图表，展示 token、请求量、模型、渠道、密钥维度趋势与占比
- 新增系统配置页面，支持管理端调整路由模式、失败阈值、冷却时间和粘性 TTL
- 优化日志体系，按应用/SQL 和日志级别拆分文件，加入 traceId 并强化请求内容脱敏
- 新增 V11 数据库迁移，持久化 gateway_system_config 路由配置
- 补充协议适配、Provider、路由、Responses SSE 和管理统计相关测试